--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "supervisor": "^0.9.1"
   },
   "dependencies": {
+    "@starefossen/node-http-error": "^1.0.1",
     "async": "^1.5.0",
     "body-parser": "^1.14.1",
     "connect-redis": "^3.0.1",
