chore(package): use tap test reporter for npm test

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "grunt": "grunt",
     "lint": "eslint test/ lib/ apps/ index.js",
-    "test": "mocha -r test/support/env -R spec -b --check-leaks test/unit test/acceptance/",
+    "test": "mocha -r test/support/env -R tap -b --check-leaks test/unit test/acceptance/",
     "watch": "mocha -r test/support/env -R progress -b --check-leaks -w test/unit test/acceptance/"
   },
   "repository": {
